--- a/HTML/ComponentesTexto/public_html/componentesTexto.html
+++ b/HTML/ComponentesTexto/public_html/componentesTexto.html
@@ -6,12 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Hola con HTML</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     </head>
     <body>
-        <div>Hola Munso con HTML</div>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;Agregamos un parrafo nuevo</p>
+        <p>segundo parrafo <br> Texto siguiente linea</p>
     </body>
 </html>
