--- a/HTML/Listas/public_html/listasDefinicion.html
+++ b/HTML/Listas/public_html/listasDefinicion.html
@@ -6,12 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Listas Definicion</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Listas No ordenadas</h1>
+        <h1>Listas de definicion</h1>
         <dl>
             <dt>Uno:</dt>
             <dd>Item 1</dd>
